--- a/action.yml
+++ b/action.yml
@@ -8,6 +8,10 @@ inputs:
     description: "Secondary Commit message"
     required: false
     default: ""
+  run_command:
+    description: "Command to run"
+    required: false
+    default: ":"
   head:
     description: "The branch to push to"
     required: false
