Drop post run event and adding a command run

--- a/action.yml
+++ b/action.yml
@@ -1,5 +1,5 @@
 name: "Push After Run"
-description: "Push changes after a step run"
+description: "Push changes after a step run."
 inputs:
   message:
     description: "Commit message"
@@ -8,6 +8,10 @@ inputs:
     description: "Secondary Commit message"
     required: false
     default: ""
+  run_command:
+    description: "Command to run"
+    required: false
+    default: ":"
   head:
     description: "The branch to push to"
     required: false
@@ -19,4 +23,3 @@ inputs:
 runs:
   using: "node12"
   main: "index.js"
-  post: "push.js"
