--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "push-after-run",
-  "version": "1.0.0",
+  "version": "0.2.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "release": "./bin/release.sh"
   },
   "repository": {
     "type": "git",
