--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "push-after-run",
-  "version": "$version.0",
+  "version": "${version}.0",
   "description": "",
   "main": "index.js",
   "scripts": {
