--- a/action.yml
+++ b/action.yml
@@ -21,5 +21,5 @@ inputs:
     required: false
     default: ""
 runs:
-  using: "node12"
-  main: "dist/index.js"
+  using: "docker"
+  image: "Dockerfile"
