--- a/action.yml
+++ b/action.yml
@@ -15,7 +15,7 @@ inputs:
   head:
     description: "The branch to push to"
     required: false
-    default: "HEAD"
+    default: ${{ github.head_ref }}
   token:
     description: "The token to use for pushing"
     required: false
